[gd_scene load_steps=2 format=3 uid="uid://de4bn0et4wygl"]

[ext_resource type="Script" path="res://join_league.gd" id="1_o8wqb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8wqb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -257.0
offset_right = 185.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Join a league
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LeagueCode" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -113.0
offset_right = 150.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
placeholder_text = "League code"
alignment = 1
max_length = 20

[node name="JoinLeague" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 67.0
offset_right = 150.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Join"

[node name="TeamName" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -53.0
offset_right = 150.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
placeholder_text = "Team name"
alignment = 1
max_length = 20

[node name="UserName" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 7.0
offset_right = 150.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
placeholder_text = "Your name"
alignment = 1
max_length = 20

[node name="Error" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 181.0
offset_right = 150.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.545098, 0, 0, 1)
horizontal_alignment = 1

[node name="Home" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 124.0
offset_right = 150.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Home"

[connection signal="pressed" from="JoinLeague" to="." method="_on_join_league_pressed"]
[connection signal="pressed" from="Home" to="." method="_on_join_league_pressed"]
